# ab_utils

./: README.md  pyproject.toml
andi_xp_utils/: __init__.py  abstract_distribution.py  binary_distribution.py  log_normal_distribution.py  normal_distribution.py  zero_infl_lognormal_distribution.py
andi_xp_utils/methods/: normal.md  normal.tex
tests/: test_binary_distribution.py  test_lognormal_distribution.py  test_normal_distribution.py
